# prompt2edit

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: image-inpainiting.ipynb
prompt2edit/: __init__.py  dataset.py  detect.py  features.py  inpaint.py  load_models.py  plots.py  segment.py
prompt2edit/modeling/: predict.py  train.py
