[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prompt2edit"
version = "0.0.1"
description = "Zero-Shot semantic image editing pipeline"
authors = [
  { name = "Abdessamed Dallaa" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["prompt2edit"]
include = ["pyproject.toml", "prompt2edit/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["prompt2edit"]
force-sort-within-sections = true

